--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.428.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "mongoose": "^7.5.0",
