--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.66.1",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "prettier": "^3.0.3"
