--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.428.0",
+    "bcrypt": "^5.1.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
     "next-auth": "^4.24.3",
