--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.1",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
-    "next": "13.4.19",
+    "next": "^14.0.4",
     "next-auth": "^4.24.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.66.1",
     "swiper": "^10.3.1",
     "zod": "^3.22.4"
